added uploading photo in registration page

--- a/static/login_registration.css
+++ b/static/login_registration.css
@@ -109,3 +109,7 @@ form .button-registration input[type="submit"]:hover {
     display: block;
     margin: 0 0 0 10px;
 }
+
+.face_photo {
+    width: 100%;
+}
