--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,6 +2,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="/static/login_registration.css">
+<script src="/static/registration.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}
@@ -12,7 +13,7 @@
 <div class="wrapper">
     <div class="title">Регистрация</div>
     <div class="form-container">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {{ form.csrf_token }}
             {% if form.csrf_token.errors %}
             <span class="field-error">You have submitted an invalid CSRF token</span>
@@ -28,6 +29,7 @@
             </div>
             {% endif %}
             {% endfor %}
+            <div id="images"></div>
             <div class="button-login">
                 <input id="submit" name="submit" type="submit" value="Войти">
             </div>
