--- a/static/profile.css
+++ b/static/profile.css
@@ -47,27 +47,27 @@
 }
 
 .main-container .container-right {
-    border: 1px solid #d9dffc;
+    border: 1px solid var(--second);
     border-radius: 10px;
     background: var(--background);
-    padding: 15px;
-    width: 74%;
+    padding: 20px;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .container-right .form-profile-1 {
     width: 90%;
     display: flex;
     flex-direction: column;
-    margin: 10px 45px;
     align-items: stretch;
 }
 
 .container-right .form-profile-1 .form-profile-1-field {
-    margin: 10px 0px;
-    width: 40%;
+    margin: 10px 0;
+    width: 50%;
 }
 
 .container-right .form-profile-1 h3,
@@ -84,24 +84,18 @@
 }
 
 .container-right .form-profile-1 .form-profile-1-field input {
-    width: 100%;
     border-radius: 5px;
-    border: 1px solid #d9dffc;
+    border: 1px solid var(--second);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     padding: 2px 2px 2px 10px;
-    background: #fff;
     outline: 0;
-}
-
-.container-right .form-profile-1 .form-profile-1-field input:hover {
-    border: 1px solid #4361EE;
-    transition: all 0.2s ease;
+    width: 80%;
 }
 
 .container-right .form-profile-1 .form-profile-1-field input:focus {
-    border: 1px solid #4361EE;
+    border: 1px solid var(--sublight);
 }
 
 .main-container .container-right .form-profile-1 input[type="submit"] {
@@ -134,7 +128,6 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    margin-left: 45px;
     width: 90%;
 }
 
