--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="/static/profile.css">
+<script src="/static/profile.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}
@@ -27,19 +28,23 @@
             {% endfor %}
             <input id="info_submit" name="info_submit" type="submit" value="Сохранить">
         </form>
-        <form method="post" class="form-profile-1">
+        <form method="post" class="form-profile-1" enctype="multipart/form-data">
             <h3>Ваша фотография для распознавания</h3>
+            <img src="{{ user.photo }}" alt="" class="face_photo">
             {{ photoForm.csrf_token }}
             <div class="form-profile-1-field">
                 <label for="photo">Обновить фотографию</label>
                 {{photoForm.photo}}
             </div>
-            <img src="/photos/HD%20wallpaper_%20Madara%20statue%20illustration,%20Naruto%20Valley%20of%20the%20End,%20Naruto%20Shippuuden.jfif"
-                 alt="">
-            <input id="change_photo_submit" name="change_data_submit" type="submit" value="Сохранить фото">
+            <div id="images"></div>
+            <input id="photo_submit" name="photo_submit" type="submit" value="Сохранить фото">
         </form>
         <form method="post" class="form-settings">
-            <a id="settings"><h3>Настройки аккаунта</h3></a>
+            <h3>Банковские карты</h3>
+            <p>Скоро...</p>
+        </form>
+        <form method="post" class="form-settings">
+            <h3>Настройки аккаунта</h3>
             <div class="form-settings-buttons">
                 <input id="logout" name="logout" type="submit" value="Выйти из аккаунта">
                 <input id="delete" name="delete" type="submit" value="Удалить аккаунт">
